--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-rant",
   "version": "1.0.0",
-  "description": "",
+  "description": "REST-Rant is an app where users can review restaurants.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,13 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KevinsCodeStorage/project-REST-rant.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KevinsCodeStorage/project-REST-rant/issues"
+  },
+  "homepage": "https://github.com/KevinsCodeStorage/project-REST-rant#readme"
 }
